--- a/style.css
+++ b/style.css
@@ -12,15 +12,24 @@ html {
 body {
     font-family: Helvetica;
     width: 100%;
+    display: grid;
+    grid-template-columns: 10vw 1fr 10vw;
+    grid-template-rows: 10rem 1fr 1fr 20rem;
 
 }
 
 header {
+    grid-row: 1/2;
+    grid-column: 1/4;
     display: flex;
     flex-direction: column;
     background-color: #f1f1f1;
 }
 
+header > div,
+header > nav {
+    margin-left: 10vw;
+} 
 header nav a {
     color: black;
     margin: 0 15px;
@@ -33,15 +42,18 @@ main {
     height: 640px;
     margin: 5px 0;
     background-color: #f5f5f5;
-    grid-template-rows: 100px 90px 25px 25px 100px 100px 80px;
+    grid-template-rows: 100px 90px repeat(2, 25px) repeat(2, 100px) 80px;
     grid-template-columns: repeat(4 1fr);
     gap: 15px;
     padding: 15px;
+    grid-row: 2/3;
+    grid-column: 2/3;
 }
 
 main div img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
  .one {
@@ -93,6 +105,8 @@ main div img {
 }
 
 section {
+    grid-row: 3/4;
+    grid-column: 2/3;
     background-color: #f5f5f5;
     width: 100%;
  
@@ -100,102 +114,80 @@ section {
 }
 
 .sec-container {
-    width: 80%;
-    height: 600px;
+    height: 100%;
     margin: 0 auto;
     gap: 5px;
     display: grid;
     grid-template-rows: repeat(3 1fr);
     grid-template-columns: repeat(3 1fr);
+    align-items: center;
+    text-align: center;
+    line-height: 200px;
+    font-weight: 900;
 }
 
 .a {
     grid-row: 1/2;
     grid-column: 1/2;
     background-color: fuchsia;
-    text-align: center;
-    line-height: 200px;
-    font-weight: 900;
+    
 }
 
 .b  {
     grid-row: 1/2;
     grid-column: 2/3;
     background-color: orange;
-    text-align: center;
-    line-height: 200px;
-    font-weight: 900;
 }
 
 .c {
     grid-row: 1/2;
     grid-column: 3/4;
     background-color: violet;
-    text-align: center;
-    line-height: 200px;
-    font-weight: 900;
+
 }
 
 .d {
     grid-row: 2/3;
     grid-column: 2/3;
    background-color: yellow;
-   text-align: center;
-    line-height: 200px;
-    font-weight: 900;
 }
 
 .e {
     grid-row: 2/3;
     grid-column: 3/4;
    background-color: lightseagreen;
-   text-align: center;
-    line-height: 200px;
-    font-weight: 900;
 }
 
 .f {
     grid-row: 3/4;
     grid-column: 3/4;
-    background-color: lavender ;
-    text-align: center;
-    line-height: 200px;
-    font-weight: 900;
+    background-color: lavender;
 }
 
 
 footer {
+    grid-row: 4/5;
+    grid-column: 1/4;
+
     display: grid;
     width: 100%;
-    height: 200px;
+    height: 100%;
     column-gap: 50px;
     row-gap: 20px;
-    justify-content: space-evenly;
-    align-content: center;
+    justify-content: end;
     padding: 20px 10% ;
     background-color: #505050;
     grid-template-rows: 150px;
-    grid-template-columns: repeat(3 300px);
+    grid-template-columns: repeat(3, 300px);
 }
 
  .foot {
-    text-align: center;
-    line-height: 200px;
     border: 1px solid white;
     color: white;
     border-radius: 10px;
-}
-
-footer .foot1 {
-    grid-row: 1/2;
-    grid-column: 1/2;
-}
-footer .foot2 {
-    grid-row: 1/2;
-    grid-column: 2/3;
-}
-
-footer .foot3 {
-  grid-row: 1/2;
-  grid-column: 3/4;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 1rem white;
 }
